@@ -1,0 +1,3 @@
+for _, force in pairs(game.forces) do
+    force.reset_technology_effects()
+end
